feat: moderniza arquitetura com records e estrutura em camadas
- Substitui DTOs por Java records para transferência de dados mais limpa e imutável
- Reorganiza projeto em arquitetura em camadas (controller/service/repository/entity/dto)
- Adiciona tratamento de erros com mensagens descritivas em todos os endpoints
- Corrige inconsistências de nomes de métodos (getTaskOrder -> getOrderNumber)
- Atualiza todos os testes para usar records ao invés de DTOs
- Adiciona método getId() faltante na entidade User
- Cria entidade TaskOption para persistência JPA
- Implementa fluxo completo de criação de atividades com validação
- Adiciona funcionalidade de publicação de cursos com validação de regras de negócio
- Implementa relatório de cursos por instrutor com filtragem adequada

Mudanças que quebram compatibilidade:
- DTOs substituídos por records (NewUserRequest, NewCourseRequest, TaskOptionRequest, etc.)
- Estrutura de pacotes reorganizada em arquitetura em camadas
- Assinaturas de métodos atualizadas para usar records